--- a/org.classupplier/src/org/classupplier/messages.properties
+++ b/org.classupplier/src/org/classupplier/messages.properties
@@ -1,26 +1,21 @@
-AbstractExporter_ExportJobName=Plug-in Export
+JobNameExport=Plug-in Export
 BundleNotFound=Bundle {0} not found in plug-in registry.
 BundleNotInstalled=Bundle {0} is not installed.
 BundleState=Bundle {0}-{1} is in {2} state.
-Class=The class '
-CodeGenerationJobName=Code Generation
-CodeGeneratorJobName=Generate Code
-Datatype=The datatype '
-DuplicateBundle=Bundle {0} is already exist in version {1} and state {2}. Duplicating bundle {3}-{4} installation is failed and in state {5}.
-EPackageClassLoadComplete=Bundle {0}-{1} with EPackage {2} has been loaded successfully.
-GenModelConfigurationJobName=Configure GenModel
-GenModelGenerationJobName=GenModel Generation
-InstallerJobName=Install
-ModelFolderDefault=model
+JobNameCodeGeneration=Code Generation
+JobNameCodeGenerator=Generate Code
+BundleDuplicate=Bundle {0} is already exist in version {1} and state {2}. Duplicating bundle {3}-{4} installation is failed and in state {5}.
+EPackageClassLoadComplete=Bundle {0}-{1} with EPackage(s) {2} has been loaded successfully.
+JobNameGenModelConfiguration=Configure GenModel
+JobNameGenModelGeneration=GenModel Generation
+JobNameInstaller=Install
+DefaultModelFolder=model
 ModelNotSpecified=Model is not specified.
-ModelResourceJobName=Model Persistence
-NoBundle=Bundle {0} not found.
-NotEnoughContributionStage=Contribution is not {0}.
-NotValidClassifier=' is not a valid classifier
-NotValidEnumerator=' is not a valid enumerator of '
-PDEExportJobName=PDE Plug-in Export
+JobNameModelResource=Model Persistence
+BundleNo=Bundle {0} not found.
+ContributionStageNotEnough=Contribution is not {0}.
+JobNamePDEExport=PDE Plug-in Export
 ProjectNotExist=The project {0} was not created before generation.
-Quote='
-ResourceExtDefault=xmi
-TargetFolderDefault=target
-Value=The value '
+DefaultResourceExt=xmi
+RecursiveContainment=Recursive containment not allowed for 
+WarningEPackageNoClassifiers=EPackage {0} doesn't have classifiers.
