--- a/bundles/org.classupplier/src/org/classupplier/messages.properties
+++ b/bundles/org.classupplier/src/org/classupplier/messages.properties
@@ -6,6 +6,7 @@ JobNameCodeGeneration=Code Generation
 JobNameCodeGenerator=Generate Code
 BundleDuplicate=Bundle {0} is already exist in version {1} and state {2}. Duplicating bundle {3}-{4} installation is failed and in state {5}.
 EPackageClassLoadComplete=Bundle {0}-{1} with EPackage(s) {2} has been loaded successfully.
+WarningEPackageNoClassifiers=EPackage {0} doesn't have classifiers.
 JobNameGenModelConfiguration=Configure GenModel
 JobNameGenModelGeneration=GenModel Generation
 JobNameInstaller=Install
@@ -17,4 +18,5 @@ ContributionStageNotEnough=Contribution is not {0}.
 JobNamePDEExport=PDE Plug-in Export
 ProjectNotExist=The project {0} was not created before generation.
 DefaultResourceExt=xmi
-WarningEPackageNoClassifiers=EPackage {0} doesn't have classifiers.
+None=None
+OK=OK
