--- a/bundles/org.enterprisedomain.classmaker/src/org/enterprisedomain/classmaker/messages.properties
+++ b/bundles/org.enterprisedomain.classmaker/src/org/enterprisedomain/classmaker/messages.properties
@@ -22,3 +22,5 @@ ProjectNotExist=The project {0} was not created before generation.
 DefaultResourceExt=xmi
 None=None
 OK=OK
+ResourceImported=Resource {0} has been imported.
+Save=Save
