Update async test and other
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker/src/org/enterprisedomain/classmaker/messages.properties
+++ b/bundles/org.enterprisedomain.classmaker/src/org/enterprisedomain/classmaker/messages.properties
@@ -6,10 +6,12 @@ JobNameCodeGeneration=Code Generation
 JobNameCodeGenerator=Generate Code
 BundleDuplicate=Bundle {0} is already exist in version {1} and state {2}. Duplicating bundle {3}-{4} installation is failed and in state {5}.
 EPackageClassLoadComplete=Loading of bundle {0}-{1} with EPackage(s) {2} has been completed successfully.
+EPackageNo=no EPackage
 WarningEPackageNoClassifiers=EPackage {0} doesn't have classifiers.
 JobNameGenModelConfiguration=Configure GenModel
 JobNameGenModelGeneration=GenModel Generation
 JobNameInstaller=Install
+JobNameLoad=Loading class
 DefaultModelFolder=model
 ModelNotSpecified=Model is not specified.
 JobNameModelResource=Model Persistence
