Initial means for overcoming vendor lock-in
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker/src/org/enterprisedomain/classmaker/messages.properties
+++ b/bundles/org.enterprisedomain.classmaker/src/org/enterprisedomain/classmaker/messages.properties
@@ -11,7 +11,7 @@ WarningEPackageNoClassifiers=EPackage {0} doesn't have classifiers.
 JobNameGenModelConfiguration=Configure GenModel
 JobNameGenModelGeneration=GenModel Generation
 JobNameInstaller=Install
-JobNameLoad=Loading class
+JobNameLoader=Loading class
 DefaultModelFolder=model
 ModelNotSpecified=Model is not specified.
 JobNameModelResource=Model Persistence
