State#setProjectVersion SubMonitor.SUPPRESS_ISCANCELED
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker/src/org/enterprisedomain/classmaker/messages.properties
+++ b/bundles/org.enterprisedomain.classmaker/src/org/enterprisedomain/classmaker/messages.properties
@@ -16,9 +16,7 @@ DefaultModelFolder=model
 ModelNotSpecified=Model is not specified.
 JobNameModelResource=Model Persistence
 BundleNo=Bundle {0} not found.
-ContributionStageNotEnough={0} didn't started. Contribution is not {1}.
 VersionNotExists=Version {0} not created.
-APINoResult=Creation didn't yielded any results.
 JobNamePDEExport=PDE Plug-in Export
 ProjectNotExist=The project {0} was not created before generation.
 DefaultResourceExt=xmi
@@ -26,3 +24,7 @@ None=None
 OK=OK
 ResourceImported=Resource {0} has been imported.
 Save=Save
+SubTaskNamePluginExport=Exporting plug-in...
+SubTaskNameSetProjectVersion=Setting project version...
+TaskNamePluginExport=Export Plug-in
+TaskNameSetProjectVersion=Update Project version
