--- a/bundles/org.enterprisedomain.classmaker/src/org/enterprisedomain/classmaker/messages.properties
+++ b/bundles/org.enterprisedomain.classmaker/src/org/enterprisedomain/classmaker/messages.properties
@@ -18,6 +18,7 @@ JobNameModelResource=Model Persistence
 BundleNo=Bundle {0} not found.
 VersionNotExists=Version {0} not created.
 JobNamePDEExport=PDE Plug-in Export
+PDEExportScheduled=PDE Plug-in Export scheduled.
 ProjectNotExist=The project {0} was not created before generation.
 DefaultResourceExt=xmi
 None=None
